test/langtools/tools/javac/switchextra/SwitchObject.out
SwitchObject.java:8:16: compiler.err.switch.invalid.type: java.lang.Object
1 error
